--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -1,26 +1,17 @@
-/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
-
-/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
+/*! Updated CSS for Flexibility and Readability | ArduPilot Website */
 
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
 html {
-    font-family: Oxygen;
+    font-family: Oxygen, sans-serif;
     font-weight: 400;
-    font-size: 15px;
-    line-height: 1.42857143;
+    font-size: 1vw; /* Adjusted for responsiveness */
+    line-height: 1.6; /* Enhanced readability */
     -webkit-font-smoothing: antialiased;
 }
 
-/*
-// This code below if uncomment makes the dropdown "automatic". It means, it is not necessary to click it, just pass the mouse over.
-*/
+/* Navbar hover dropdown fix */
 .navbar-nav li:hover .dropdown-menu {
     display: block;
 }
@@ -32,59 +23,55 @@ html {
     content: none;
 }
 
+/* Navbar brand customization */
 .navbar-brand {
     display: inline-block;
-    padding-top: 1rem;
-    padding-right: 10rem;
-    padding-bottom: 0.3125rem;
-    margin-right: 1rem;
-    font-size: 1.25rem;
+    padding-top: 2vw; /* Responsive padding */
+    padding-right: 5vw;
+    padding-bottom: 1vw;
+    margin-right: 2vw;
+    font-size: 1.5vw;
     line-height: inherit;
     white-space: nowrap;
-
 }
 
-.carousel-inner{
-    width:100%;
+/* Carousel responsiveness */
+.carousel-inner {
+    width: 100%;
     height: auto;
 }
 
-.carousel-inner img{
-    max-height: 480px;
+.carousel-inner img {
+    max-height: 30vw; /* Responsive height */
 }
 
 .carousel-control-next,
 .carousel-control-prev {
-    width: 30px;
+    width: 2vw;
 }
-
 
 .carousel-control-next-icon,
 .carousel-control-prev-icon {
     display: inline-block;
-    width: 30px; /* ArduPilot */
-    height: 30px; /* ArduPilot */
-
+    width: 2vw;
+    height: 2vw;
 }
 
-/*#blog_posts .row .col-md-4 a {*/
-/*    min-height: 485px; !* Modify to your preference *!*/
-/*}*/
-
+/* Flexibility for blog posts */
 .col_min {
-    min-height: 300px;
+    min-height: 20vw;
 }
 
+/* Improved readability for background and links */
 .bg-dark {
-    /* background-color: #343a40 !important; */
     background-color: #000000 !important;
-
 }
 
 .nav-link {
     display: block;
     padding: 0.5rem 1rem;
-    color: white !important; /* ArduPilot */
+    color: white !important;
+    font-size: 1vw; /* Responsive link size */
 }
 
 .nav-link:hover {
@@ -92,28 +79,15 @@ html {
     text-decoration: underline;
 }
 
+/* Remove dropdown toggle arrow */
 .dropdown-toggle::after {
-/*display: inline-block;*/
-margin-left: 0.255em;
-vertical-align: 0.255em;
-content: "";
-border-top: 0.3em solid;
-border-right: 0.3em solid transparent;
-border-bottom: 0;
-border-left: 0.3em solid transparent;
-display: none;
+    margin-left: 0.255em;
+    vertical-align: 0.255em;
+    content: "";
+    display: none;
 }
 
-/*
-* Remove text-shadow in selection highlight:
-* https://twitter.com/miketaylr/status/12228805301
-*
-* Vendor-prefixed and regular ::selection selectors cannot be combined:
-* https://stackoverflow.com/a/16982510/7133471
-*
-* Customize the background color to match your design.
-*/
-
+/* Improved selection styles */
 ::-moz-selection {
     background: #b3d4fc;
     text-shadow: none;
@@ -124,25 +98,17 @@ display: none;
     text-shadow: none;
 }
 
-/*
- * A better looking default horizontal rule
- */
-
+/* Horizontal rule readability */
 hr {
     display: block;
     height: 1px;
     border: 0;
     border-top: 1px solid #ccc;
-    margin: 1em 0;
+    margin: 2vw 0;
     padding: 0;
 }
 
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
+/* Image and media alignment */
 audio,
 canvas,
 iframe,
@@ -152,50 +118,29 @@ video {
     vertical-align: middle;
 }
 
-/*
- * Remove default fieldset styles.
- */
-
+/* Form fields reset */
 fieldset {
     border: 0;
     margin: 0;
     padding: 0;
 }
 
-/*
- * Allow only vertical resizing of textareas.
- */
-
+/* Allow vertical resizing of textareas */
 textarea {
     resize: vertical;
 }
 
 /* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-/* ==========================================================================
    Helper classes
    ========================================================================== */
 
-/*
- * Hide visually and from screen readers
- */
-
+/* Hide visually and from screen readers */
 .hidden,
 [hidden] {
     display: none !important;
 }
 
-/*
- * Hide only visually, but have it available for screen readers:
- * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
- *
- * 1. For long content, line feeds are not interpreted as spaces and small width
- *    causes content to wrap 1 word per line:
- *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
- */
-
+/* Screen-reader-only accessibility */
 .sr-only {
     border: 0;
     clip: rect(0, 0, 0, 0);
@@ -206,14 +151,7 @@ textarea {
     position: absolute;
     white-space: nowrap;
     width: 1px;
-    /* 1 */
 }
-
-/*
- * Extends the .sr-only class to allow the element
- * to be focusable when navigated to via the keyboard:
- * https://www.drupal.org/node/897638
- */
 
 .sr-only.focusable:active,
 .sr-only.focusable:focus {
@@ -226,26 +164,12 @@ textarea {
     width: auto;
 }
 
-/*
- * Hide visually and from screen readers, but maintain layout
- */
-
+/* Hide while maintaining layout */
 .invisible {
     visibility: hidden;
 }
 
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
+/* Flexbox clearfix */
 .clearfix::before,
 .clearfix::after {
     content: " ";
@@ -257,35 +181,55 @@ textarea {
 }
 
 /* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
+   Responsive Media Queries for Flexibility
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
+/* For smaller screens (mobile-first approach) */
+@media only screen and (max-width: 768px) {
+    html {
+        font-size: 3vw;
+    }
+
+    .navbar-brand {
+        padding-top: 1vw;
+        padding-right: 2vw;
+        padding-bottom: 0.5vw;
+        font-size: 2vw;
+    }
+
+    .nav-link {
+        font-size: 1.5vw;
+        padding: 0.5vw 0.5vw;
+    }
+
+    .carousel-inner img {
+        max-height: 50vw;
+    }
 }
 
-@media print,
-(-webkit-min-device-pixel-ratio: 1.25),
-(min-resolution: 1.25dppx),
-(min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
+/* For larger screens (desktop-first approach) */
+@media only screen and (min-width: 1024px) {
+    html {
+        font-size: 1vw;
+    }
+
+    .navbar-brand {
+        font-size: 1.25vw;
+        padding-top: 1.5vw;
+    }
+
+    .carousel-inner img {
+        max-height: 25vw;
+    }
 }
 
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid the additional HTTP request:
-   https://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
-
+/* Print-specific styles */
 @media print {
     *,
     *::before,
     *::after {
         background: #fff !important;
         color: #000 !important;
-        /* Black prints faster */
         box-shadow: none !important;
         text-shadow: none !important;
     }
@@ -303,15 +247,6 @@ textarea {
         content: " (" attr(title) ")";
     }
 
-    /*
-     * Don't show links that are fragment identifiers,
-     * or use the `javascript:` pseudo protocol
-     */
-    a[href^="#"]::after,
-    a[href^="javascript:"]::after {
-        content: "";
-    }
-
     pre {
         white-space: pre-wrap !important;
     }
@@ -322,10 +257,6 @@ textarea {
         page-break-inside: avoid;
     }
 
-    /*
-     * Printing Tables:
-     * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
-     */
     thead {
         display: table-header-group;
     }
@@ -347,4 +278,3 @@ textarea {
         page-break-after: avoid;
     }
 }
-
