--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -1,6 +1,6 @@
-/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
+/*! HTML5 Boilerplate v9.0.0-RC1 | MIT License | https://html5boilerplate.com/ */
 
-/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
+/* main.css 3.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
 /*
  * What follows is the result of much research on cross-browser styling.
  * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
@@ -10,6 +10,7 @@
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
+
 html {
     font-family: Oxygen;
     font-weight: 400;
@@ -105,14 +106,11 @@ display: none;
 }
 
 /*
-* Remove text-shadow in selection highlight:
-* https://twitter.com/miketaylr/status/12228805301
-*
-* Vendor-prefixed and regular ::selection selectors cannot be combined:
-* https://stackoverflow.com/a/16982510/7133471
-*
-* Customize the background color to match your design.
-*/
+ * Remove text-shadow in selection highlight:
+ * https://twitter.com/miketaylr/status/12228805301
+ *
+ * Customize the background color to match your design.
+ */
 
 ::-moz-selection {
     background: #b3d4fc;
@@ -196,7 +194,7 @@ textarea {
  *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
  */
 
-.sr-only {
+.visually-hidden {
     border: 0;
     clip: rect(0, 0, 0, 0);
     height: 1px;
@@ -210,13 +208,13 @@ textarea {
 }
 
 /*
- * Extends the .sr-only class to allow the element
+ * Extends the .visually-hidden class to allow the element
  * to be focusable when navigated to via the keyboard:
  * https://www.drupal.org/node/897638
  */
 
-.sr-only.focusable:active,
-.sr-only.focusable:focus {
+.visually-hidden.focusable:active,
+.visually-hidden.focusable:focus {
     clip: auto;
     height: auto;
     margin: 0;
@@ -237,18 +235,13 @@ textarea {
 /*
  * Clearfix: contain floats
  *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
+ * The use of `table` rather than `block` is only necessary if using
+ * `::before` to contain the top-margins of child elements.
  */
 
 .clearfix::before,
 .clearfix::after {
-    content: " ";
+    content: "";
     display: table;
 }
 
@@ -320,14 +313,6 @@ textarea {
     blockquote {
         border: 1px solid #999;
         page-break-inside: avoid;
-    }
-
-    /*
-     * Printing Tables:
-     * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
-     */
-    thead {
-        display: table-header-group;
     }
 
     tr,
